--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
 /* Normalize and reset */
 @import "../../node_modules/modern-normalize/modern-normalize.css";
 
-@font-face {
-    font-family: "pixel";
-    src:    url(/fonts/Minecraft.woff2) format("woff"),
-            url(/fonts/Minecraft.woff) format("woff"),
-            url(fonts/Minecraft.ttf) format("truetype");
-}
 :root{
     line-height: 1.5;
-    --main-color: #081820;
-    --sec-color:#000818;
-    --text: #f8fce8;
+    --main-color: #004f77;
+    --sec-color:#ffffff;
+    --trd-color:#e7e7e7;
+    --text-main: #eeeeee;
+    --text-sec:#181818;
+    --text-trd:#252525;
+    font-family: sans-serif;
 }
 html{
     height: 100%;
@@ -32,3 +30,135 @@ img {
     max-inline-size: 100%;
 }
 /* END Normalize and reset */
+
+body{
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: min-content 6fr;
+}
+
+h1{
+    font-size: 18px;
+    font-weight: 700;
+}
+h2{
+    font-size: 16px;
+    font-weight: 750;
+}
+h3{
+    font-size: 14px;
+}
+.announcements-text{
+    font-size: 12px;
+}
+.sidebar{
+    grid-column: 1;
+    grid-row: 1/-1;
+    position: relative;
+}
+.nav{
+    grid-column: 2;
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px min-content;
+    padding: 1rem;
+    /*box-shadow: 0px 8px 5px -5px #818181;*/
+    position: relative;
+}
+.nav-top{
+    grid-row: 1;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    justify-items: start;
+    gap: 2rem;
+}
+.searchbar{
+    display: inline-grid;
+    grid-template-columns: 1fr minmax(100px, 600px);
+    gap: 1rem;
+}
+input[type=text]{
+    background-color: var(--trd-color);
+    border: none;
+    height: 1.5rem;
+    box-shadow: inset -2px 2px 2px 0px #aaa9a9b4;
+    border-radius: 1rem;
+}
+.profile{
+    display: grid;
+    grid-template-columns: 1fr 50px max-content;
+    align-items: center;
+    justify-items: center;
+    gap: 1rem;
+}
+.nav-bottom{
+    grid-row: 2;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    justify-items:baseline;
+    align-items: center;
+}
+.welcome{
+    display: inline-grid;
+    grid-template-columns: 70px 3fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1rem;
+    align-items: center;
+}
+.welcome p{
+    grid-column: 2;
+    font-weight: bold;
+}
+.msg{
+    align-self: end;
+}
+.welcome .name{
+    align-self: baseline;
+}
+.nav ul{
+    list-style-type: none;
+    display: inline-grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1.5rem;
+    justify-items: stretch;
+    align-items: stretch;
+}
+.option{
+    justify-items: center;
+    align-items: center;
+}
+
+.dashboard{
+    grid-column: 2;
+    grid-row: 2;
+    background-color: var(--trd-color);
+    box-shadow: inset 0px 10px 5px -5px #aaa9a9b4;
+    position: relative;
+}
+.pp-small{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.pp-large{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    grid-row: 1/3;
+}
+button{
+    background-color: var(--main-color);
+    color: var(--text-main);
+    border-radius: 25px;
+    padding: 8px 30px;
+    border: 1px solid var(--text-main);
+}
+button:hover{
+    background-color: var(--trd-color);
+    color: var(--text-sec);
+    box-shadow: inset -1px 1px 2px #aaa9a9b4;
+    /* border: 1px solid var(--text-sec); */
+}
