--- a/style.css
+++ b/style.css
@@ -33,12 +33,12 @@ img {
 
 body{
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: max-content 4fr;
     grid-template-rows: min-content 6fr;
 }
 
 h1{
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 700;
 }
 h2{
@@ -48,13 +48,49 @@ h2{
 h3{
     font-size: 14px;
 }
+ul{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.logo{
+  font-size: 2.5rem;
+}
+
 .announcements-text{
     font-size: 12px;
 }
 .sidebar{
+    display: grid;
     grid-column: 1;
     grid-row: 1/-1;
-    position: relative;
+    grid-template-rows: repeat(3,max-content);
+    background-color: var(--main-color);
+    color: var(--text-main);
+    gap: 3rem;
+    padding-right: 1.5rem;
+}
+.sidebar-links ul li, .sidebar-links .bottom ul li{
+    grid-row: 2 / span 1;
+    display: grid;
+    grid-template-columns: max-content max-content;
+    column-gap: 2rem;
+    padding: 10px 1rem;
+    font-size: 18px;
+    /* font-weight: bold; */
+}
+.sidebar-links ul li span{
+    grid-column: 2;
+}
+.title{
+    display: grid;
+    grid-template-columns: max-content max-content;
+    column-gap: 1rem;
+    padding: 1rem 1rem;
+}
+.title h1{
+    grid-column: 2;
 }
 .nav{
     grid-column: 2;
@@ -120,7 +156,7 @@ input[type=text]{
 }
 .nav ul{
     list-style-type: none;
-    display: inline-grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 1.5rem;
     justify-items: stretch;
