--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 
 :root{
     line-height: 1.5;
-    --main-color: #004f77;
-    --sec-color:#ffffff;
-    --trd-color:#e7e7e7;
-    --text-main: #eeeeee;
-    --text-sec:#181818;
-    --text-trd:#252525;
+    --main-color: #1e1b4b;
+    --sec-color:#eef2ff;
+    --trd-color:#d4d4e2a6;
+    --text-main: #eef2ff;
+    --text-sec:#1b1b1b;
+    --text-trd:#383838e7;
     font-family: sans-serif;
 }
 html{
@@ -39,7 +39,7 @@ body{
 
 h1{
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 800;
 }
 h2{
     font-size: 16px;
@@ -98,9 +98,10 @@ ul{
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 50px min-content;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     /*box-shadow: 0px 8px 5px -5px #818181;*/
     position: relative;
+    color: var(--text-sec);
 }
 .nav-top{
     grid-row: 1;
@@ -197,4 +198,123 @@ button:hover{
     color: var(--text-sec);
     box-shadow: inset -1px 1px 2px #aaa9a9b4;
     /* border: 1px solid var(--text-sec); */
+}
+.dashboard{
+    display: grid;
+    grid-template-columns: 5fr minmax(150px, 2.5fr);
+    grid-template-rows:max-content 1fr;
+    color: var(--text-sec);
+    gap: 2rem;
+    padding: 2rem 1.5rem;
+}
+.projects{
+    grid-column: 1;
+    grid-row: 1/3;
+    color: var(--text-sec);
+}
+.projects h1{
+    margin-bottom: 5px;
+
+}
+.cards-container{
+    display: grid;
+    column-gap: 2rem;
+    row-gap: 1.5rem;
+    grid-template-rows: repeat(2, max-content);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-auto-rows: max-content;
+}
+.card{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content min-content 30px;
+    background-color: white;
+    padding: 1.5rem 2rem 1.5rem 1.5rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 5px #aaaaa9b4;
+    border-left: 5px solid #f1cf37;
+}
+
+.card h2{
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.card-text{
+    grid-row: 2;
+    color: var(--text-trd);
+}
+
+.card ul{
+    grid-row: 3;
+    display: grid;
+    grid-template-columns: 1rem 1rem 1rem;
+    grid-template-rows: 1rem;
+    gap: 2rem;
+    justify-self: end;
+    align-self: center;
+}
+.announcements h1{
+    margin-bottom: 5px;
+}
+.announcement h3{
+    color: var(--text-sec);
+    font-weight: bold;
+}
+.announcement{
+    margin-bottom: 1rem;
+}
+
+.announcement .announcements-text{
+    color: var(--text-trd);
+}
+
+.announcement-container{
+    background-color: white;
+    padding: 1.5rem 2rem 1.5rem 1.5rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 5px #aaaaa9b4;
+}
+
+.trending h1{
+    margin-bottom: 5px;
+    
+}
+
+.trending-container{
+    background-color: white;
+    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
+    border-radius: 8px;
+    box-shadow: 0px 4px 5px #aaaaa9b4;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4,min-content);
+    row-gap: 0.7rem;
+}
+
+.trending-card{
+    display: grid;
+    grid-template-columns: 50px max-content;
+    grid-template-rows: max-content min-content;
+    column-gap: 1rem;
+    overflow: hidden;
+}
+
+.trending-card div{
+    grid-column: 2;
+    overflow: auto;
+}
+.trending-card .at{
+    align-self: end;
+    color: var(--text-sec);
+}
+.trending-card .project-name{
+    align-self: baseline;
+    color: var(--text-trd);
+    font-size: 14px;
+}
+.trending-card img{
+    grid-column: 1;
+    grid-row: 1/3;
+    align-self: center;
 }
